--- a/src/main/resources/templates/ventas/edit_ventas_item.html
+++ b/src/main/resources/templates/ventas/edit_ventas_item.html
@@ -22,8 +22,8 @@
     </tbody>
   </table>
   <br />
-  <form action="#" th:action="@{/tienda/ventas/item/update}"
-        th:object="${item}" method="post">
+  <form action="#" th:action="@{/tienda/ventas/pedidoVentaItem/update}"
+        th:object="${pedidoVentaItem}" method="post">
     <table border="0" cellpadding="10">
       <tr>
         <td>Item:</td>
