falta create de web -> implementar / vista ok falta edit de web -> implementar y agregar el estado falta show de venta en web

--- a/src/main/resources/templates/prendas/save_prendas.html
+++ b/src/main/resources/templates/prendas/save_prendas.html
@@ -19,7 +19,7 @@
     </tbody>
   </table>
   <br />
-  <form action="#" th:action="@{/tienda/prendas/save}"
+  <form action="" th:action="@{/tienda/prendas/estado}"
         th:object="${prenda}" method="post">
     <table border="0" cellpadding="10">
       <tr>
@@ -43,8 +43,21 @@
         <td><input type="text" th:field="*{precioBase}" /></td>
       </tr>
       <tr>
+        <td>Estado:</td>
+        <td th:object="${tipoEstados}">
+          <select id="estado" name="estado">
+            <option value="">Elija un tipo</option>
+            <option th:each="estado: ${tipoEstados}"
+                    th:text="${estado}"
+                    th:value="${estado}">
+            </option>
+          </select>
+        </td>
+      </tr>
+      <tr>
         <td colspan="2"><button type="submit">Grabar</button></td>
       </tr>
+
     </table>
   </form>
 </div>
