--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,21 +4,44 @@
 <head>
   <meta charset="utf-8" />
   <title>Tienda Ropita</title>
+  <link rel="stylesheet" href="css/fontello.css">
+   <link rel="stylesheet" href="css/estilos.css">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
 </head>
+
 <body>
 <div align="center">
   <h1>Tienda Ropita</h1>
   <h2>Menú Principal</h2>
-  <h3>2022 1C</h3>
 </div>
 <br />
-<div align="left">
+<div class="d-grid gap-2 col-4 mx-auto" class="btn-group btn-group-lg" role="group" aria-label="Large button group">
+  <button type="button" class="btn btn-outline-success"><a href="/tienda/prendas/list">Listado de prendas</a></button>
+  <button type="button" class="btn btn-outline-success"><a href="/tienda/clientes/list">Listado de clientes</a></button>
+  <button type="button" class="btn btn-outline-success"><a href="/tienda/ventas/list">Listado de ventas</a></button>
+</div>
+<!--<div class="container text-left">
+	<div class="row" id="BotonesListados">
   <ul>
-    <li><a href="/tienda/prendas/list">Listado de prendas</a></li>
-    <li><a href="/tienda/clientes/list">Listado de clientes</a></li>
-    <li><a href="/tienda/ventas/list">Listado de ventas</a></li>
+     <li><a href="/tienda/prendas/list" id="BotonesListados">Listado de prendas</a></li>
+    <li><a href="/tienda/clientes/list" id="BotonesListados">Listado de clientes</a></li>
+    <li><a href="/tienda/ventas/list" id="BotonesListados">Listado de ventas</a></li>
   </ul>
   <br />
-</div>
+	</div>
+</div>-->
+
+<footer>
+        <div class="contenedor">
+            <p class="copy" >Tienda Ropita &copy; 2023 </p>
+            <div class="sociales">
+                <a class="icon-twitter" href="#"></a>
+                <a class="icon-instagram" href="#"></a>
+                <a class="icon-facebook-squared" href="#"></a>
+                <a class="icon-googleplus-rect" href="#"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
