--- a/src/main/resources/templates/prendas/list_prendas.html
+++ b/src/main/resources/templates/prendas/list_prendas.html
@@ -4,60 +4,43 @@
 <head>
   <meta charset="utf-8" />
   <title>Administrador de Prendas</title>
+   <link rel="stylesheet" href="css/fontello.css">
+   <link rel="stylesheet" href="css/estilos.css">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
 </head>
 <body>
 <div align="center">
   <h1>Listado de Prendas</h1>
   <br />
-  <table>
-    <tbody>
-    <tr>
-      <th><a href="/tienda">Volver al menú pricipal</a></th>
-      <th>&nbsp;</th>
-      <th><a href="/tienda/prendas/new">Crear una nueva
-
-        Prenda</a></th>
-
-    </tr>
-    </tbody>
-  </table>
+	<div class="d-grid gap-2 col-2">
+	  <button class="btn btn-secondary  btn-sm" type="button"><a href="/tienda" id="Boton">Volver al menú pricipal</a></button>
+	 	<!--<th>&nbsp;</th>-->
+	  <button class="btn btn-secondary  btn-sm" type="button"><a href="/tienda/prendas/new" id="Boton">Crear una nueva Prenda</a></button>
+	</div>
   <br />
-  <div style = "display:flex;flex-direction:row">
-
-    <p> Page Number: </p>
-    <p th:text="${pageNumber}">Page Number</p>
-    <br/>
-    <p> Total Pages: </p>
-    <p th:text="${totalPages}">Total Pages</p>
-
-  </div>
-  <table border="1" cellpadding="10">
-    <thead>
+  
+  <table class="table-dark">
+  <thead>
     <tr>
-      <th>Prenda ID</th>
-      <th>Descripción</th>
-      <th>Tipo</th>
-      <th>Precio Base</th>
-      <th>Acciones</th>
+      <th scope="col">Prenda ID</th>
+      <th scope="col">Descripción</th>
+      <th scope="col">Precio Base</th>
+      <th scope="col">Acciones</th>
     </tr>
-    </thead>
-    <tbody>
-    <tr th:each="prenda : ${listPrendas}">
+  </thead>
+  <tbody  th:each="prenda : ${listPrendas}">
+    <tr>
+      <th scope="row">1</th>
       <td th:text="${prenda.id}">Prenda ID</td>
       <td th:text="${prenda.descripcion}">Descripcion</td>
-      <td th:text="${prenda.tipo.descripcion}">Tipo</td>
+       <td th:text="${prenda.tipo.descripcion}">Tipo</td>
       <td th:text="${prenda.precioBase}">Precio Base</td>
-      <td><a th:href="@{'/tienda/prendas/edit/' +
-
-${prenda.id}}">Editar</a>
-
-        &nbsp;&nbsp;&nbsp; <a
-                th:href="@{'/tienda/prendas/delete/' +
-
-${prenda.id}}">Borrar</a></td>
+      <td><a th:href="@{'/tienda/prendas/edit/' + ${prenda.id}}" class="btn btn-primary" id="botonEditar" >Editar</a>
+        &nbsp;&nbsp;&nbsp; <a th:href="@{'/tienda/prendas/delete/' + ${prenda.id}}" class="btn btn-primary" id="botonBorrar" >Borrar</a></td>
     </tr>
-    </tbody>
-  </table>
+  </tbody>
+</table>
 </div>
 </body>
 </html>
