correccion clase repetida en div de botonera

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
   <h2>Menú Principal</h2>
 </div>
 <br />
-<div class="d-grid gap-2 col-4 mx-auto" class="btn-group btn-group-lg" role="group" aria-label="Large button group">
+<div class="d-grid gap-2 col-4 mx-auto btn-group btn-group-lg" role="group" aria-label="Large button group">
   <button type="button" class="btn btn-outline-success"><a href="/tienda/prendas/list">Listado de prendas</a></button>
   <button type="button" class="btn btn-outline-success"><a href="/tienda/clientes/list">Listado de clientes</a></button>
   <button type="button" class="btn btn-outline-success"><a href="/tienda/ventas/list">Listado de ventas</a></button>
