--- a/src/main/resources/templates/css/estilos.css
+++ b/src/main/resources/templates/css/estilos.css
@@ -35,6 +35,12 @@ body{
 	   	width: 15px;
 }
 
+a{
+    text-decoration: none;
+    color: azure;
+    border-color: #503630;
+}
+
 #Boton{
 	text-decoration: none;
     color: azure;
