--- a/src/main/resources/templates/clientes/list_clientes.html
+++ b/src/main/resources/templates/clientes/list_clientes.html
@@ -3,26 +3,24 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/fontello.css">
+  <link rel="stylesheet" href="css/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
   <title>Administrador de Clientes</title>
 </head>
 <body>
 <div align="center">
   <h1>Listado de Clientes</h1>
-  <br />
-  <table>
-    <tbody>
-    <tr>
-      <th><a href="/tienda">Volver al menú pricipal</a></th>
-      <th>&nbsp;</th>
-      <th><a href="/tienda/clientes/new">Crear un nuevo
 
-        Cliente</a></th>
-
-    </tr>
-    </tbody>
-  </table>
   <br />
-  <table border="1" cellpadding="10">
+  <div class="d-grid gap-2 col-4">
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda" >Volver al menú pricipal</a>
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda/clientes/new">Crear Nuevo</a>
+  </div>
+  <br />
+
+  <table class="table table-striped table-light table-hover col-md-6">
     <thead>
     <tr>
       <th>Cliente ID</th>
