--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,24 +2,29 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="utf-8" />
-  <title>Tienda Ropita</title>
-  <link rel="stylesheet" href="css/fontello.css">
-   <link rel="stylesheet" href="css/estilos.css">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <meta charset="utf-8" />
+    <title>Tienda Ropita</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="css/fontello.css">
+    <link rel="stylesheet" href="css/estilos.css">
+
 
 </head>
 
 <body>
 <div align="center">
-  <h1>Tienda Ropita</h1>
-  <h2>Menú Principal</h2>
+    <h1>Tienda Ropita</h1>
+    <h2>Menú Principal</h2>
 </div>
 <br />
+
 <div class="d-grid gap-2 col-4 mx-auto btn-group btn-group-lg" role="group" aria-label="Large button group">
-  <button type="button" class="btn btn-outline-success"><a href="/tienda/prendas/list">Listado de prendas</a></button>
-  <button type="button" class="btn btn-outline-success"><a href="/tienda/clientes/list">Listado de clientes</a></button>
-  <button type="button" class="btn btn-outline-success"><a href="/tienda/ventas/list">Listado de ventas</a></button>
+    <a class="text-decoration-none btn btn-success  btn-sm" href="/tienda/prendas/list">Listado de prendas</a>
+    <a class="text-decoration-none btn btn-success  btn-sm" href="/tienda/clientes/list">Listado de clientes</a>
+    <a class="text-decoration-none btn btn-success  btn-sm" href="/tienda/ventas/list">Listado de ventas</a>
 </div>
 <!--<div class="container text-left">
 	<div class="row" id="BotonesListados">
@@ -33,15 +38,15 @@
 </div>-->
 
 <footer>
-        <div class="contenedor">
-            <p class="copy" >Tienda Ropita &copy; 2023 </p>
-            <div class="sociales">
-                <a class="icon-twitter" href="#"></a>
-                <a class="icon-instagram" href="#"></a>
-                <a class="icon-facebook-squared" href="#"></a>
-                <a class="icon-googleplus-rect" href="#"></a>
-            </div>
+    <div class="contenedor">
+        <p class="copy" >Tienda Ropita &copy; 2023 </p>
+        <div class="sociales">
+            <a class="icon-twitter" href="#"></a>
+            <a class="icon-instagram" href="#"></a>
+            <a class="icon-facebook-squared" href="#"></a>
+            <a class="icon-googleplus-rect" href="#"></a>
         </div>
-    </footer>
+    </div>
+</footer>
 </body>
 </html>
