--- a/src/main/resources/templates/prendas/list_prendas.html
+++ b/src/main/resources/templates/prendas/list_prendas.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
-  <meta charset="utf-8" />
-  <title>Administrador de Prendas</title>
-   <link rel="stylesheet" href="css/fontello.css">
-   <link rel="stylesheet" href="css/estilos.css">
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
+    <meta charset="utf-8"/>
+    <title>Administrador de Prendas</title>
+    <link rel="stylesheet" href="/css/fontello.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-<div align="center">
-  <h1>Listado de Prendas</h1>
-  <br />
-	<div class="d-grid gap-2 col-2">
-	  <button class="btn btn-secondary  btn-sm" type="button"><a href="/tienda" id="Boton">Volver al menú pricipal</a></button>
-	 	<!--<th>&nbsp;</th>-->
-	  <button class="btn btn-secondary  btn-sm" type="button"><a href="/tienda/prendas/new" id="Boton">Crear una nueva Prenda</a></button>
-	</div>
-  <br />
-  
-  <table class="table-dark">
-  <thead>
-    <tr>
-      <th scope="col">Prenda ID</th>
-      <th scope="col">Descripción</th>
-      <th scope="col">Precio Base</th>
-      <th scope="col">Acciones</th>
-    </tr>
-  </thead>
-  <tbody  th:each="prenda : ${listPrendas}">
-    <tr>
-      <th scope="row">1</th>
-      <td th:text="${prenda.id}">Prenda ID</td>
-      <td th:text="${prenda.descripcion}">Descripcion</td>
-       <td th:text="${prenda.tipo.descripcion}">Tipo</td>
-      <td th:text="${prenda.precioBase}">Precio Base</td>
-      <td><a th:href="@{'/tienda/prendas/edit/' + ${prenda.id}}" class="btn btn-primary" id="botonEditar" >Editar</a>
-        &nbsp;&nbsp;&nbsp; <a th:href="@{'/tienda/prendas/delete/' + ${prenda.id}}" class="btn btn-primary" id="botonBorrar" >Borrar</a></td>
-    </tr>
-  </tbody>
-</table>
-</div>
+  <div align="center">
+      <h1>Listado de Prendas</h1>
+      <br/>
+      <div class="d-grid gap-2 col-4">
+         <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda" >Volver al menú pricipal</a>
+
+          <!--<th>&nbsp;</th>-->
+          <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda/prendas/new">Crear una nueva
+              Prenda</a>
+      </div>
+      <br/>
+
+      <table class="table table-striped table-light table-hover col-md-6">
+          <thead>
+          <tr>
+              <th scope="col">Prenda ID</th>
+              <th scope="col">Descripción</th>
+              <th scope="col">Tipo</th>
+              <th scope="col">Precio Base</th>
+              <th scope="col">Acciones</th>
+          </tr>
+          </thead>
+          <tbody class="table-group-divider">
+          <tr th:each="prenda : ${listPrendas}">
+              <td th:text="${prenda.id}">Prenda ID</td>
+              <td th:text="${prenda.descripcion}">Descripcion</td>
+              <td th:text="${prenda.tipo.descripcion}">Tipo</td>
+              <td th:text="${prenda.precioBase}">Precio Base</td>
+              <td><a th:href="@{'/tienda/prendas/edit/' + ${prenda.id}}" class="btn btn-primary"
+                     id="botonEditar">Editar</a>
+                  &nbsp;&nbsp;&nbsp; <a th:href="@{'/tienda/prendas/delete/' + ${prenda.id}}" class="btn btn-primary"
+                                        id="botonBorrar">Borrar</a></td>
+          </tr>
+          </tbody>
+      </table>
+  </div>
 </body>
 </html>
