--- a/src/main/resources/templates/ventas/edit_ventas.html
+++ b/src/main/resources/templates/ventas/edit_ventas.html
@@ -3,13 +3,25 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8" />
-  <title>Editar Prenda</title>
+  <link rel="stylesheet" href="css/fontello.css">
+  <link rel="stylesheet" href="css/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+  <title>Editar Venta</title>
 </head>
 <body>
 <div align="center">
-  <h1>Editar Prenda</h1>
+  <h1>Editar Venta</h1>
+
   <br />
-  <table>
+  <div class="d-grid gap-2 col-4">
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda" >Volver al menú pricipal</a>
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda/ventas/efectivo/new">Crear una nueva Venta Efectivo</a>
+  </div>
+  <br />
+  <br />
+
+  <table class="table table-striped table-light table-hover col-md-6">
     <tbody>
     <tr>
       <th><a href="/tienda">Volver al menú pricipal</a></th>
@@ -21,7 +33,7 @@
   <br />
   <form action="#" th:action="@{/tienda/prendas/save}"
         th:object="${prenda}" method="post">
-    <table border="0" cellpadding="10">
+    <table class="table table-striped table-light table-hover col-md-6">
       <tr>
         <td>Prenda ID:</td>
         <td><input type="text" th:field="*{id}" readonly="readonly"
