--- a/src/main/resources/templates/ventas/edit_ventas_item.html
+++ b/src/main/resources/templates/ventas/edit_ventas_item.html
@@ -3,28 +3,26 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/fontello.css">
+  <link rel="stylesheet" href="css/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
   <title>Edita un Item de Venta</title>
 </head>
 <body>
 <div align="center">
   <h1>Edita nuevo Item de Venta</h1>
   <br />
-  <table>
-    <tbody>
-    <tr>
-
-      <!-- <th><a href="/tienda/ventas/show_ventas">Volver al detalle de la
-      venta</a></th> -->
-
-      <th>&nbsp;</th>
-      <th><a href="/tienda/ventas/list">Volver al listado ventas</a></th>
-    </tr>
-    </tbody>
-  </table>
+  <div class="d-grid gap-2 col-4">
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda" >Volver al menú pricipal</a>
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda/ventas/show_ventas">Volver al detalle de la venta</a>
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda/ventas/list">Volver al listado de ventas</a>
+  </div>
   <br />
+
   <form action="#" th:action="@{/tienda/ventas/pedidoVentaItem/update}"
         th:object="${pedidoVentaItem}" method="post">
-    <table border="0" cellpadding="10">
+    <table  class="table table-striped table-light table-hover col-md-6">
       <tr>
         <td>Item:</td>
         <td><input type="text" th:field="*{id}" readonly="readonly"/></td>
