--- a/src/main/resources/templates/ventas/list_ventas.html
+++ b/src/main/resources/templates/ventas/list_ventas.html
@@ -13,25 +13,25 @@
 <div align="center">
   <h1>Listado de Ventas</h1>
   <br />
-  <div class="d-grid gap-2 col-2">
- 	<button class="btn btn-secondary  btn-sm" type="button"><a href="/tienda" id="Boton">Volver al menú pricipal</a></button>
-     <!-- <th>&nbsp;</th>-->
-     <button class="btn btn-secondary  btn-sm" type="button"><a href="/tienda/ventas/efectivo/new" id="Boton">Crear una nueva Venta Efectivo</a></button>
-     <button class="btn btn-secondary  btn-sm" type="button"><a href="/tienda/ventas/tarjeta/new" id="Boton">Crear una nueva Venta Tarjeta</a></button>
-   	</div>
+  <div class="d-grid gap-2 col-4">
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda" >Volver al menú pricipal</a>
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda/ventas/efectivo/new">Crear una nueva Venta Efectivo</a>
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda/ventas/tarjeta/new">Crear una nueva Venta Tarjeta</a>
+  </div>
   <br />
-  <table class="table">
+
+  <table class="table table-striped table-light table-hover">
   <thead>
     <tr>
       <th scope="col">Venta ID</th>
       <th scope="col">Fecha</th>
       <th scope="col">Cliente</th>
+      <th scope="col">Importe final</th>
       <th scope="col">Acciones</th>
     </tr>
   </thead>
   <tbody class="table-group-divider">
     <tr th:each="venta : ${listVentas}">
-      <th scope="row">1</th>
       <td th:text="${venta.id}">Venta ID</td>
       <td th:text="${venta.fecha}">Fecha</td>
       <td th:text="${venta.razonSocial}">Cliente</td>
