--- a/src/main/resources/templates/ventas/new_ventas_efectivo.html
+++ b/src/main/resources/templates/ventas/new_ventas_efectivo.html
@@ -3,25 +3,24 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/fontello.css">
+  <link rel="stylesheet" href="css/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
   <title>Crea un nuevo Venta Efecivo</title>
 </head>
 <body>
 <div align="center">
   <h1>Crear una nueva Venta En Efectivo</h1>
   <br />
-  <table>
-    <tbody>
-    <tr>
-      <th><a href="/tienda">Volver al menú pricipal</a></th>
-      <th>&nbsp;</th>
-      <th><a href="/tienda/ventas/list">Volver</a></th>
-    </tr>
-    </tbody>
-  </table>
+  <div class="d-grid gap-2 col-4">
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda" >Volver al menú pricipal</a>
+    <a class="text-decoration-none btn btn-secondary  btn-sm" href="/tienda/ventas/list">Volver</a>
+  </div>
   <br />
   <form action="#" th:action="@{/tienda/ventas/efectivo/save}"
         th:object="${venta}" method="post">
-    <table border="0" cellpadding="10">
+    <table class="table table-striped table-light table-hover col-md-6">
       <tr>
         <td>Cliente:</td>
         <td><input type="text" th:field="*{clienteId}" /></td>
