--- a/src/main/resources/templates/ventas/new_ventas_item.html
+++ b/src/main/resources/templates/ventas/new_ventas_item.html
@@ -3,13 +3,17 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/fontello.css">
+  <link rel="stylesheet" href="css/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
   <title>Crea un nuevo Item de Venta</title>
 </head>
 <body>
 <div align="center">
   <h1>Crear un nuevo Item de Venta</h1>
   <br />
-  <table>
+  <table class="table table-striped table-light table-hover col-md-6">
     <tbody>
     <tr>
 
