--- a/src/main/resources/templates/ventas/show_ventas.html
+++ b/src/main/resources/templates/ventas/show_ventas.html
@@ -3,13 +3,17 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8" />
+  <link rel="stylesheet" href="css/fontello.css">
+  <link rel="stylesheet" href="css/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
   <title>Administrador de Ventas</title>
 </head>
 <body>
 <div class="container" align="center">
   <h1>Listado de Ventas</h1>
   <br />
-  <table>
+  <table class="table table-striped table-light table-hover col-md-6">
     <tbody>
     <tr>
       <th><button style="background-color: #008CBA; font-size:
@@ -25,7 +29,7 @@ medium; font-family:Arial; ">
     </tbody>
   </table>
   <br/>
-  <table border="2" cellpadding="20" style="border-color:black" width="50%">
+  <table class="table table-striped table-light table-hover col-md-6">
     <thead>
     <tr style="background:gray;color:white">
       <th colspan="1" rowspan="1" style="background-blend-mode:
