--- a/src/main/resources/templates/ventas/show_ventas.html
+++ b/src/main/resources/templates/ventas/show_ventas.html
@@ -77,7 +77,7 @@ color-dodge">Ventas</th>
 
               <a style="color: white"
 
-                 th:href="@{'/tienda/ventas/' + ${venta.id} +'/pedidoVentaItem/new'}">Agregar Item</a>
+                 th:href="@{'/tienda/ventas/' + ${venta.id} +'/item/new'}">Agregar Item</a>
 
             </button>
           </td>
